@@ -28,5 +28,10 @@ Mods: {
 		Condition.InVerdant: In the Verdant biome
 		RecipeCondition.AfterApotheosisDownedPlantera: In the Verdant biome
 		"Keybinds.Verdant:SquidForm.DisplayName": Verdant: Squid Form
+
+		GameTips: {
+			VerdantGameTip0: Talk to the Apotheosis often, they might have rewards for you.
+			VerdantGameTip1: The lush caves of the Verdant offer a reprieve anywhere!
+		}
 	}
 }
